rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_class_generic_types.snap
---
source: ruff_python_parser/src/parser.rs
expression: "ast::Suite::parse(source, \"<test>\").unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            range: 10..29,
            name: Identifier {
                id: "Foo",
                range: 16..19,
            },
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 26..29,
                        value: Constant(
                            ExprConstant {
                                range: 26..29,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 20..21,
                        name: Identifier {
                            id: "T",
                            range: 20..21,
                        },
                        bound: None,
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 52..76,
            name: Identifier {
                id: "Foo",
                range: 58..61,
            },
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 73..76,
                        value: Constant(
                            ExprConstant {
                                range: 73..76,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 62..68,
                        name: Identifier {
                            id: "T",
                            range: 62..63,
                        },
                        bound: Some(
                            Name(
                                ExprName {
                                    range: 65..68,
                                    id: "str",
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 105..138,
            name: Identifier {
                id: "Foo",
                range: 111..114,
            },
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 135..138,
                        value: Constant(
                            ExprConstant {
                                range: 135..138,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 115..130,
                        name: Identifier {
                            id: "T",
                            range: 115..116,
                        },
                        bound: Some(
                            Tuple(
                                ExprTuple {
                                    range: 118..130,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 119..122,
                                                id: "str",
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 124..129,
                                                id: "bytes",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 159..181,
            name: Identifier {
                id: "Foo",
                range: 165..168,
            },
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 178..181,
                        value: Constant(
                            ExprConstant {
                                range: 178..181,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 169..170,
                        name: Identifier {
                            id: "T",
                            range: 169..170,
                        },
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 172..173,
                        name: Identifier {
                            id: "U",
                            range: 172..173,
                        },
                        bound: None,
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 200..223,
            name: Identifier {
                id: "Foo",
                range: 206..209,
            },
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 220..223,
                        value: Constant(
                            ExprConstant {
                                range: 220..223,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 210..211,
                        name: Identifier {
                            id: "T",
                            range: 210..211,
                        },
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 213..214,
                        name: Identifier {
                            id: "U",
                            range: 213..214,
                        },
                        bound: None,
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 240..261,
            name: Identifier {
                id: "Foo",
                range: 246..249,
            },
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 258..261,
                        value: Constant(
                            ExprConstant {
                                range: 258..261,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            type_params: [
                TypeVarTuple(
                    TypeParamTypeVarTuple {
                        range: 250..253,
                        name: Identifier {
                            id: "Ts",
                            range: 251..253,
                        },
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 275..296,
            name: Identifier {
                id: "Foo",
                range: 281..284,
            },
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 293..296,
                        value: Constant(
                            ExprConstant {
                                range: 293..296,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            type_params: [
                ParamSpec(
                    TypeParamParamSpec {
                        range: 285..288,
                        name: Identifier {
                            id: "P",
                            range: 287..288,
                        },
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 312..351,
            name: Identifier {
                id: "Foo",
                range: 318..321,
            },
            bases: [],
            keywords: [],
            body: [
                Pass(
                    StmtPass {
                        range: 347..351,
                    },
                ),
            ],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 322..323,
                        name: Identifier {
                            id: "X",
                            range: 322..323,
                        },
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 325..331,
                        name: Identifier {
                            id: "Y",
                            range: 325..326,
                        },
                        bound: Some(
                            Name(
                                ExprName {
                                    range: 328..331,
                                    id: "str",
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
                TypeVarTuple(
                    TypeParamTypeVarTuple {
                        range: 333..335,
                        name: Identifier {
                            id: "U",
                            range: 334..335,
                        },
                    },
                ),
                ParamSpec(
                    TypeParamParamSpec {
                        range: 337..340,
                        name: Identifier {
                            id: "P",
                            range: 339..340,
                        },
                    },
                ),
            ],
            decorator_list: [],
        },
    ),
]
