rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_double_list_comprehension.snap
---
source: ruff_python_parser/src/parser.rs
expression: parse_ast
---
ListComp(
    ExprListComp {
        range: 0..48,
        elt: Name(
            ExprName {
                range: 1..2,
                id: "x",
                ctx: Load,
            },
        ),
        generators: [
            Comprehension {
                range: 3..17,
                target: Tuple(
                    ExprTuple {
                        range: 7..12,
                        elts: [
                            Name(
                                ExprName {
                                    range: 7..8,
                                    id: "y",
                                    ctx: Store,
                                },
                            ),
                            Name(
                                ExprName {
                                    range: 10..12,
                                    id: "y2",
                                    ctx: Store,
                                },
                            ),
                        ],
                        ctx: Store,
                    },
                ),
                iter: Name(
                    ExprName {
                        range: 16..17,
                        id: "z",
                        ctx: Load,
                    },
                ),
                ifs: [],
                is_async: false,
            },
            Comprehension {
                range: 18..47,
                target: Name(
                    ExprName {
                        range: 22..23,
                        id: "a",
                        ctx: Store,
                    },
                ),
                iter: Name(
                    ExprName {
                        range: 27..28,
                        id: "b",
                        ctx: Load,
                    },
                ),
                ifs: [
                    Compare(
                        ExprCompare {
                            range: 32..37,
                            left: Name(
                                ExprName {
                                    range: 32..33,
                                    id: "a",
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                Lt,
                            ],
                            comparators: [
                                Constant(
                                    ExprConstant {
                                        range: 36..37,
                                        value: Int(
                                            5,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    Compare(
                        ExprCompare {
                            range: 41..47,
                            left: Name(
                                ExprName {
                                    range: 41..42,
                                    id: "a",
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                Gt,
                            ],
                            comparators: [
                                Constant(
                                    ExprConstant {
                                        range: 45..47,
                                        value: Int(
                                            10,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ],
                        },
                    ),
                ],
                is_async: false,
            },
        ],
    },
)
