rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_named_expression_generator_comprehension.snap
---
source: ruff_python_parser/src/parser.rs
expression: parse_ast
---
GeneratorExp(
    ExprGeneratorExp {
        range: 0..23,
        elt: NamedExpr(
            ExprNamedExpr {
                range: 1..11,
                target: Name(
                    ExprName {
                        range: 1..2,
                        id: "x",
                        ctx: Store,
                    },
                ),
                value: BinOp(
                    ExprBinOp {
                        range: 6..11,
                        left: Name(
                            ExprName {
                                range: 6..7,
                                id: "y",
                                ctx: Load,
                            },
                        ),
                        op: Add,
                        right: Constant(
                            ExprConstant {
                                range: 10..11,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
        generators: [
            Comprehension {
                range: 12..22,
                target: Name(
                    ExprName {
                        range: 16..17,
                        id: "y",
                        ctx: Store,
                    },
                ),
                iter: Name(
                    ExprName {
                        range: 21..22,
                        id: "z",
                        ctx: Load,
                    },
                ),
                ifs: [],
                is_async: false,
            },
        ],
    },
)
