rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_print_2.snap
---
source: ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..23,
            value: Call(
                ExprCall {
                    range: 0..23,
                    func: Name(
                        ExprName {
                            range: 0..5,
                            id: "print",
                            ctx: Load,
                        },
                    ),
                    args: [
                        Constant(
                            ExprConstant {
                                range: 6..19,
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 21..22,
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        ),
                    ],
                    keywords: [],
                },
            ),
        },
    ),
]
