rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__variadic_generics.snap
---
source: ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    FunctionDef(
        StmtFunctionDef {
            range: 1..49,
            name: Identifier {
                id: "args_to_tuple",
                range: 5..18,
            },
            args: Arguments {
                range: 18..30,
                posonlyargs: [],
                args: [],
                vararg: Some(
                    Arg {
                        range: 20..29,
                        arg: Identifier {
                            id: "args",
                            range: 20..24,
                        },
                        annotation: Some(
                            Starred(
                                ExprStarred {
                                    range: 26..29,
                                    value: Name(
                                        ExprName {
                                            range: 27..29,
                                            id: "Ts",
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        ),
                        type_comment: None,
                    },
                ),
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Expr(
                    StmtExpr {
                        range: 46..49,
                        value: Constant(
                            ExprConstant {
                                range: 46..49,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            returns: Some(
                Subscript(
                    ExprSubscript {
                        range: 34..44,
                        value: Name(
                            ExprName {
                                range: 34..39,
                                id: "Tuple",
                                ctx: Load,
                            },
                        ),
                        slice: Starred(
                            ExprStarred {
                                range: 40..43,
                                value: Name(
                                    ExprName {
                                        range: 41..43,
                                        id: "Ts",
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                        ctx: Load,
                    },
                ),
            ),
            type_params: [],
            type_comment: None,
        },
    ),
]
